--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "core-js": "^2.4.1",
     "primeng": "^4.3.0",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
-  },
+    "zone.js": "^0.8.4",
+    "font-awesome": "^4.7.0"
+	  },
   "devDependencies": {
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
